feat(serprate navbar and product preview)

--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -736,182 +736,6 @@
     <!--== Scroll Top Button ==-->
     <div id="scroll-to-top" class="scroll-to-top"><span class="fa fa-angle-up"></span></div>
 
-    <!--== Start Product Quick Wishlist Modal ==-->
-    <aside class="product-action-modal modal fade" id="action-WishlistModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="product-action-view-content">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal">
-                            <i class="fa fa-times"></i>
-                        </button>
-                        <div class="modal-action-messages">
-                            <i class="fa fa-check-square-o"></i> با موفقیت به لیست علاقه مندی ها اضافه شد!
-                        </div>
-                        <div class="modal-action-product">
-                            <div class="thumb">
-                                <img src="{% static 'images/shop/modal1.webp' %}" alt="Organic Food Juice" width="466" height="320">
-                            </div>
-                            <h4 class="product-name"><a href="#">محتوای قابل خواندن </a></h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </aside>
-    <!--== End Product Quick Wishlist Modal ==-->
-
-    <!--== Start Product Quick Add Cart Modal ==-->
-    <aside class="product-action-modal modal fade" id="action-CartAddModal" tabindex="-1" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body">
-                    <div class="product-action-view-content">
-                        <button type="button" class="btn-close" data-bs-dismiss="modal">
-                            <i class="fa fa-times"></i>
-                        </button>
-                        <div class="modal-action-messages">
-                            <i class="fa fa-check-square-o"></i>با موفقیت به لیست علاقه مندی ها اضافه شد!
-                        </div>
-                        <div class="modal-action-product">
-                            <div class="thumb">
-                                <img src="{% static 'images/shop/modal1.webp' %}" alt="Organic Food Juice" width="466" height="320">
-                            </div>
-                            <h4 class="product-name"><a href="#">محتوای قابل خواندن</a></h4>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </aside>
-    <!--== End Product Quick Add Cart Modal ==-->
-
-    <!--== Start Product Quick View Modal ==-->
-{#    <aside class="product-cart-view-modal modal fade" id="action-QuickViewModal" tabindex="-1" aria-hidden="true">#}
-{#        <div class="modal-dialog modal-dialog-centered">#}
-{#            <div class="modal-content">#}
-{#                <div class="modal-body">#}
-{#                    <div class="product-quick-view-content">#}
-{#                        <button type="button" class="btn-close" data-bs-dismiss="modal">#}
-{#                            <span class="fa fa-close"></span>#}
-{#                        </button>#}
-{#                        <div class="container">#}
-{#                            <div class="row">#}
-{#                                <div class="col-lg-6">#}
-{#                                    <!--== Start Product Thumbnail Area ==-->#}
-{#                                    <div class="product-single-thumb">#}
-{#                                        <img src="{% static 'images/shop/quick-view1.webp' %}" width="544" height="560" alt="Image-HasTech">#}
-{#                                    </div>#}
-{#                                    <!--== End Product Thumbnail Area ==-->#}
-{#                                </div>#}
-{#                                <div class="col-lg-6">#}
-{#                                    <!--== Start Product Info Area ==-->#}
-{#                                    <div class="product-details-content">#}
-{#                                        <h5 class="product-details-collection">مجموعه ممتاز</h5>#}
-{#                                        <h3 class="product-details-title">پاک کن آفلاین</h3>#}
-{#                                        <div class="product-details-review mb-5">#}
-{#                                            <div class="product-review-icon">#}
-{#                                                <i class="fa fa-star-o"></i>#}
-{#                                                <i class="fa fa-star-o"></i>#}
-{#                                                <i class="fa fa-star-o"></i>#}
-{#                                                <i class="fa fa-star-o"></i>#}
-{#                                                <i class="fa fa-star-half-o"></i>#}
-{#                                            </div>#}
-{#                                            <button type="button" class="product-review-show">150 بررسی</button>#}
-{#                                        </div>#}
-{#                                        <p class="mb-6">برای خانم‌ها و آقایانی که قصد خرید محصولاتی عالی و اصلی را دارند و می‌خواهند درباره چیزی که می‌خرند اطلاعات کامل و واقعی داشته باشند. این همیشه سرلوحه شعارهای مدیاژ بوده و ما در این مجموعه تمامی تلاشمان این است که مشتری‌هایمان بتوانند با اطلاعات کامل از طیف گسترده‌ای از محصولات بازار، توانایی خرید داشته باشند و در کنار این‌ها، همیشه از اصل بودن و کیفیت بالای خرید خود اطمینان داشته باشند.</p>#}
-{#                                        <div class="product-details-pro-qty">#}
-{#                                            <div class="pro-qty">#}
-{#                                                <input type="text" title="Quantity" value="01">#}
-{#                                            </div>#}
-{#                                        </div>#}
-{#                                        <div class="product-details-action">#}
-{#                                            <h4 class="price">254.00 تومان</h4>#}
-{#                                            <div class="product-details-cart-wishlist">#}
-{#                                                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">به سبد خرید اضافه کنید</button>#}
-{#                                            </div>#}
-{#                                        </div>#}
-{#                                    </div>#}
-{#                                    <!--== End Product Info Area ==-->#}
-{#                                </div>#}
-{#                            </div>#}
-{#                        </div>#}
-{#                    </div>#}
-{#                </div>#}
-{#            </div>#}
-{#        </div>#}
-{#    </aside>#}
-    <!--== End Product Quick View Modal ==-->
-
-    <!--== Start Aside Menu ==-->
-    <aside class="off-canvas-wrapper offcanvas offcanvas-start" tabindex="-1" id="AsideOffcanvasMenu" aria-labelledby="offcanvasExampleLabel">
-        <div class="offcanvas-header">
-            <h1 class="d-none" id="offcanvasExampleLabel">منوی کنار</h1>
-            <button class="btn-menu-close" data-bs-dismiss="offcanvas" aria-label="Close">منو <i class="fa fa-chevron-left"></i></button>
-        </div>
-        <div class="offcanvas-body">
-            <div id="offcanvasNav" class="offcanvas-menu-nav">
-                <ul>
-                    <li class="offcanvas-nav-parent"><a class="offcanvas-nav-item" href="#">صفحه اصلی</a>
-                        <ul>
-                            <li><a href="#">صفحه اصلی یک</a></li>
-                            <li><a href="#">صفحه اصلی دو</a></li>
-                        </ul>
-                    </li>
-                    <li class="offcanvas-nav-parent"><a class="offcanvas-nav-item" href="#">در باره</a></li>
-                    <li class="offcanvas-nav-parent"><a class="offcanvas-nav-item" href="#">فروشگاه</a>
-                        <ul>
-                            <li><a href="#" class="offcanvas-nav-item">چیدمان فروشگاه</a>
-                                <ul>
-                                    <li><a href="#">فروشگاه 3 ستون</a></li>
-                                    <li><a href="#">فروشگاه 4 ستون</a></li>
-                                    <li><a href="#">فروشگاه نوار کناری سمت راست</a></li>
-                                    <li><a href="#">فروشگاه نوار کناری سمت چپ</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#" class="offcanvas-nav-item">جزئیات محصول</a>
-                                <ul>
-                                    <li><a href="#" class="offcanvas-nav-item">جزئیات محصول معمولی</a></li>
-                                    <li><a href="#">جزئیات محصول</a></li>
-                                    <li><a href="#">جزئیات محصول گروهی</a></li>
-                                    <li><a href="#">محصول وابسته</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#" class="offcanvas-nav-item">صفحات دیگر</a>
-                                <ul>
-                                    <li><a href="#">سبد خرید</a></li>
-                                    <li><a href="#">پرداخت</a></li>
-                                    <li><a href="#">لیست علاقه مندیها</a></li>
-                                    <li><a href="#">مقایسه کنید</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li class="offcanvas-nav-parent"><a class="offcanvas-nav-item" href="#">وبلاگ</a>
-                        <ul>
-                            <li><a class="offcanvas-nav-item" href="#">چیدمان وبلاگ</a>
-                                <ul>
-                                    <li><a href="#">شبکه وبلاگ</a></li>
-                                    <li><a href="#">منو سایدبار سمت راست وبلاگ</a></li>
-                                    <li><a href="#">منو سایدبار سمت چپ وبلاگ</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">جزئیات وبلاگ</a></li>
-                        </ul>
-                    </li>
-                    <li class="offcanvas-nav-parent"><a class="offcanvas-nav-item" href="#">صفحه</a>
-                        <ul>
-                            <li><a href="#">حساب کاربری</a></li>
-                            <li><a href="#">سوالات متداول</a></li>
-                            <li><a href="#">صفحه یافت نشد</a></li>
-                        </ul>
-                    </li>
-                    <li class="offcanvas-nav-parent"><a class="offcanvas-nav-item" href="#">ارتباط با ما</a></li>
-                </ul>
-            </div>
-
-        </div>
-    </aside>
-    <!--== End Aside Menu ==-->
+    {% include 'partials/product_preview.html' %}
 
 {% endblock %}
