--- a/templates/parent/base.html
+++ b/templates/parent/base.html
@@ -48,6 +48,7 @@
     {% include 'parent/footer.html' %}
     {% include 'partials/search_bar.html' %}
     {% include 'partials/cart.html' %}
+    {% include 'partials/navbar.html' %}
 </div>
 <!--== Wrapper End ==-->
 
