--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -193,168 +193,6 @@
         </section>
         <!--== End Product Banner Area Wrapper ==-->
 
-        <!--== Start Product Area Wrapper ==-->
-        <section class="section-space pb-0">
-            <div class="container">
-                <div class="row mb-n4 mb-sm-n10 g-3 g-sm-6">
-                    <div class="col-6 col-lg-4 mb-4 mb-sm-8">
-                        <!--== Start Product Item ==-->
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <a class="d-block" href="#">
-                                    <img src="{% static 'images/shop/4.webp' %}" width="370" height="450" alt="Image-HasTech">
-                                </a>
-                                <span class="flag-new">جدید</span>
-                                <div class="product-action">
-                                    <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
-                                        <i class="fa fa-expand"></i>
-                                    </button>
-                                    <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
-                                        <span>به سبد خرید اضافه کنید</span>
-                                    </button>
-                                    <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                        <i class="fa fa-heart-o"></i>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="product-info">
-                                <div class="product-rating">
-                                    <div class="rating">
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                    </div>
-                                    <div class="reviews">150 بررسی</div>
-                                </div>
-                                <h4 class="title"><a href="#">محتوای قابل خواندن</a></h4>
-                                <div class="prices">
-                                    <span class="price">21.00 تومان</span>
-                                    <span class="price-old">300.00</span>
-                                </div>
-                            </div>
-                            <div class="product-action-bottom">
-                                <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
-                                    <i class="fa fa-expand"></i>
-                                </button>
-                                <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                    <i class="fa fa-heart-o"></i>
-                                </button>
-                                <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
-                                    <span>به سبد خرید اضافه کنید</span>
-                                </button>
-                            </div>
-                        </div>
-                        <!--== End prPduct Item ==-->
-                    </div>
-                    <div class="col-6 col-lg-4 mb-4 mb-sm-8">
-                        <!--== Start Product Item ==-->
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <a class="d-block" href="#">
-                                    <img src="{% static 'images/shop/5.webp' %}" width="370" height="450" alt="Image-HasTech">
-                                </a>
-                                <span class="flag-new">جدید</span>
-                                <div class="product-action">
-                                    <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
-                                        <i class="fa fa-expand"></i>
-                                    </button>
-                                    <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
-                                        <span>به سبد خرید اضافه کنید</span>
-                                    </button>
-                                    <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                        <i class="fa fa-heart-o"></i>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="product-info">
-                                <div class="product-rating">
-                                    <div class="rating">
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                    </div>
-                                    <div class="reviews">150 بررسی</div>
-                                </div>
-                                <h4 class="title"><a href="#">پاک کننده صورت و دست</a></h4>
-                                <div class="prices">
-                                    <span class="price">21.00 تومان</span>
-                                    <span class="price-old">300.00</span>
-                                </div>
-                            </div>
-                            <div class="product-action-bottom">
-                                <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
-                                    <i class="fa fa-expand"></i>
-                                </button>
-                                <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                    <i class="fa fa-heart-o"></i>
-                                </button>
-                                <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
-                                    <span>به سبد خرید اضافه کنید</span>
-                                </button>
-                            </div>
-                        </div>
-                        <!--== End prPduct Item ==-->
-                    </div>
-                    <div class="col-6 col-lg-4 mb-4 mb-sm-8">
-                        <!--== Start Product Item ==-->
-                        <div class="product-item">
-                            <div class="product-thumb">
-                                <a class="d-block" href="#">
-                                    <img src="{% static 'images/shop/6.webp' %}" width="370" height="450" alt="Image-HasTech">
-                                </a>
-                                <span class="flag-new">جدید</span>
-                                <div class="product-action">
-                                    <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
-                                        <i class="fa fa-expand"></i>
-                                    </button>
-                                    <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
-                                        <span>به سبد خرید اضافه کنید</span>
-                                    </button>
-                                    <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                        <i class="fa fa-heart-o"></i>
-                                    </button>
-                                </div>
-                            </div>
-                            <div class="product-info">
-                                <div class="product-rating">
-                                    <div class="rating">
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-o"></i>
-                                        <i class="fa fa-star-half-o"></i>
-                                    </div>
-                                    <div class="reviews">150 بررسی</div>
-                                </div>
-                                <h4 class="title"><a href="#">ایمپالس دافلصورت</a></h4>
-                                <div class="prices">
-                                    <span class="price">21.00 تومان</span>
-                                    <span class="price-old">300.00</span>
-                                </div>
-                            </div>
-                            <div class="product-action-bottom">
-                                <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
-                                    <i class="fa fa-expand"></i>
-                                </button>
-                                <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                    <i class="fa fa-heart-o"></i>
-                                </button>
-                                <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
-                                    <span>به سبد خرید اضافه کنید</span>
-                                </button>
-                            </div>
-                        </div>
-                        <!--== End prPduct Item ==-->
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!--== End Product Area Wrapper ==-->
-
         <!--== Start Blog Area Wrapper ==-->
         <section class="section-space">
             <div class="container">
@@ -371,7 +209,7 @@
                         <!--== Start Blog Item ==-->
                         <div class="post-item">
                             <a href="#" class="thumb">
-                                <img src="images/blog/1.webp" width="370" height="320" alt="Image-HasTech">
+                                <img src="{% static 'images/blog/1.webp' %}" width="370" height="320" alt="Image-HasTech">
                             </a>
                             <div class="content">
                                 <a class="post-category" href="#">زیبایی</a>
