fix(mobile-quick-view)

--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -142,7 +142,7 @@
                                 </div>
                             </div>
                             <div class="product-action-bottom">
-                                <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal">
+                                <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal-{{ product.slug }}">
                                     <i class="fa fa-expand"></i>
                                 </button>
                                 <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
