--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -117,8 +117,8 @@
                                     <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
                                         <span>به سبد خرید اضافه کنید</span>
                                     </button>
-                                    <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                        <i class="fa fa-heart-o"></i>
+                                    <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal-{{ product.slug }}" data-slug="{{ product.slug }}">
+                                        <i class="fa {% if request.user in product.likes.all %}fa-heart{% else %}fa-heart-o{% endif %}"></i>
                                     </button>
                                 </div>
                             </div>
@@ -145,8 +145,8 @@
                                 <button type="button" class="product-action-btn action-btn-quick-view" data-bs-toggle="modal" data-bs-target="#action-QuickViewModal-{{ product.slug }}">
                                     <i class="fa fa-expand"></i>
                                 </button>
-                                <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal">
-                                    <i class="fa fa-heart-o"></i>
+                                <button type="button" class="product-action-btn action-btn-wishlist" data-bs-toggle="modal" data-bs-target="#action-WishlistModal-{{ product.slug }}" data-slug="{{ product.slug }}">
+                                    <i class="fa {% if request.user in product.likes.all %}fa-heart{% else %}fa-heart-o{% endif %}"></i>
                                 </button>
                                 <button type="button" class="product-action-btn action-btn-cart" data-bs-toggle="modal" data-bs-target="#action-CartAddModal">
                                     <span>به سبد خرید اضافه کنید</span>
@@ -156,6 +156,7 @@
                         <!--== End prPduct Item ==-->
                     </div>
                         {% include 'partials/product_quick_view.html' with obj=product %}
+                        {% include 'partials/product_like_modal.html' with obj=product %}
                     {% endfor %}
                 </div>
             </div>
@@ -288,4 +289,8 @@
 
     {% include 'partials/product_preview.html' %}
 
+{% endblock %}
+
+{% block script %}
+    <script src="{% static 'js/like.js' %}"></script>
 {% endblock %}
