--- a/templates/partials/cart.html
+++ b/templates/partials/cart.html
@@ -1,4 +1,4 @@
-l{% load static %}
+{% load static %}
 <!--== Start Aside Cart ==-->
 <aside class="aside-cart-wrapper offcanvas offcanvas-end" tabindex="-1" id="AsideOffcanvasCart"
        aria-labelledby="offcanvasRightLabel">
