--- a/shop/templates/index.html
+++ b/shop/templates/index.html
@@ -207,7 +207,7 @@
 
     <!--== Scroll Top Button ==-->
     <div id="scroll-to-top" class="scroll-to-top"><span class="fa fa-angle-up"></span></div>
-
+    {% csrf_token %}
     {% include 'partials/add_to_cart_preview.html' %}
 
 {% endblock %}
